fix(docs-infra): switch code font from `Droid Sans Mono` to `Roboto Mono` (#40667)
`Droid Sans Mono` didn't look good on some screens.

Fixes #40666

PR Close #40667

--- a/aio/src/styles/_constants.scss
+++ b/aio/src/styles/_constants.scss
@@ -1,6 +1,6 @@
 // TYPOGRAPHY
 $main-font: "Roboto","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
-$code-font: "Droid Sans Mono", monospace;
+$code-font: "Roboto Mono", monospace;
 
 // Z-LAYER
 $layer-1: 1;
